Fixed calendar spacing

--- a/landing page.html
+++ b/landing page.html
@@ -27,15 +27,14 @@
 <div class="calendar-container">
     <header class="calendar-header">
         <p class="calendar-current-date"></p>
-        <iv class="calendar-navdigation">
+        <div class="calendar-navdigation">
             <span id="calendar-prev" class="material-symbols-rounded">
-                chevron_left
+                nav_left
                 </span>
             <span id="calendar-next" class="material-symbols-rounded">
-                chevron_right
+                nav_right
             </span>
-
-</div>
+        </div>
     </header>
     <div class="calendar-body">
         <ul class="calendar-days">
