--- a/landing page.html
+++ b/landing page.html
@@ -29,10 +29,10 @@
         <p class="calendar-current-date"></p>
         <div class="calendar-navdigation">
             <span id="calendar-prev" class="material-symbols-rounded">
-                nav_left
+                prev
                 </span>
             <span id="calendar-next" class="material-symbols-rounded">
-                nav_right
+                next
             </span>
         </div>
     </header>
@@ -51,8 +51,4 @@
 </div>
 <script src="script.js"></script>
 <body>
-<title>
-    Welcome to Patrick Henry High School
-</title>
 </body>
-</html>
