--- a/landing page.html
+++ b/landing page.html
@@ -8,47 +8,47 @@
     <link rel="stylesheet" href="Style.css">
     <title>Welcome to Henry High!</title>
 </head>
-<h1>Welcome to Henry High!</h1>
-<h4>Home of the Patrick Henry Patriots</h4>
-<div class="events">
-    <div class="event1">
-        <h3>Tennis tryouts</h3>
-        <h5>February 8th, 10-1 PM</h5>
-    </div>
-    <div class="event2">
-        <h3>AI Club Meeting</h3>
-        <h5>February 19th, 12-12:30 PM</h5>
-    </div>
-    <div class="event3">
-        <h3>Froyo Friday!!</h3>
-        <h5>At lunch</h5>
-    </div>
-</div>
-<div class="calendar-container">
-    <header class="calendar-header">
-        <p class="calendar-current-date"></p>
-        <div class="calendar-navdigation">
-            <span id="calendar-prev" class="material-symbols-rounded">
-                prev
-                </span>
-            <span id="calendar-next" class="material-symbols-rounded">
-                next
-            </span>
-        </div>
-    </header>
-    <div class="calendar-body">
-        <ul class="calendar-days">
-            <li>Sun</li>
-            <li>Mon</li>
-            <li>Tues</li>
-            <li>Wed</li>
-            <li>Thur</li>
-            <li>Fri</li>
-            <li>Sat</li>
-        </ul>
-        <ul class="calendar-dates"></ul>
-    </div>
-</div>
-<script src="script.js"></script>
 <body>
+    <div class="main-container">
+        <div class="header-content">
+            <h1>Welcome to Henry High!</h1>
+            <h4>Home of the Patrick Henry Patriots</h4>
+        </div>
+        <div class="calendar-section">
+            <div class="calendar-container">
+                <header class="calendar-header">
+                    <p class="calendar-current-date"></p>
+                    <div class="calendar-navigation">
+                        <span id="calendar-prev" class="material-symbols-rounded">
+                            prev
+                        </span>
+                        <span id="calendar-next" class="material-symbols-rounded">
+                            next
+                        </span>
+                    </div>
+                </header>
+                <div class="calendar-body">
+                    <ul class="calendar-days">
+                        <li>Sun</li>
+                        <li>Mon</li>
+                        <li>Tues</li>
+                        <li>Wed</li>
+                        <li>Thur</li>
+                        <li>Fri</li>
+                        <li>Sat</li>
+                    </ul>
+                    <ul class="calendar-dates"></ul>
+                </div>
+            </div>
+            <div id="events-popup" class="events-popup">
+                <div class="popup-header">
+                    <h3>Events</h3>
+                    <button class="close-popup">×</button>
+                </div>
+                <div class="popup-content"></div>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
+</html>
