--- a/landing page.html
+++ b/landing page.html
@@ -13,19 +13,19 @@
         <div class="header-content">
             <h1>Welcome to Henry High!</h1>
             <h4>Home of the Patrick Henry Patriots</h4>
-            <div class="weather-widget">
-                <div class="weather-info">
-                    <h3>San Diego Weather</h3>
-                    <div class="weather-data">
-                        <div class="temperature">Loading...</div>
-                        <div class="weather-icon">
-                            <div class="loading-spinner"></div>
-                        </div>
-                        <div class="description">Loading...</div>
+        </div>
+    <div class="weather-widget">
+            <div class="weather-info">
+                <h3>Weather at Henry High</h3>
+                <div class="weather-data">
+                    <div class="temperature">Loading...</div>
+                    <div class="weather-icon">
+                        <div class="loading-spinner"></div>
                     </div>
+                    <div class="description">Loading...</div>
                 </div>
             </div>
-        </div>
+    </div>
         <div class="calendar-section">
             <div class="calendar-container">
                 <header class="calendar-header">
